--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "clone": "^2.1.2",
+    "gh": "^2.8.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "repo": "0.0.15",
+    "weather-icons": "github:erikflowers/weather-icons",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
